<resources>
    <string name="app_name">B&amp;Q</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_myProfile">My Profile</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_messages">Messages</string>

    <string name="help_content">
        <big><b>Welcome to the B&amp;Q help page.</b></big>\n\n
        <p>On this page you can find information about the app, and answers to Frequently Asked Questions (FAQ).</p>\n\n
        <big><b>General Information</b></big>\n\n
        <p><b>B&amp;Q</b> is an app for students, by students.\n
            The app facilitates the selling of old books, and offers a place where you can ask study-related questions.\n
            To see the books people are selling, go to the home page and tap on a study. In the pop-up, select \"Books\".\n
            To see the questions people are asking, go to the home page and tap on a study. This time, select \"Questions\" in the pop-up.</p>\n\n
        <big><b>FAQ</b></big>\n\n
        <p><b>How do I pay for a book?</b>\n
            You have to discuss payment methods with the seller.\n\n
            <b>Who answers my questions? Can I trust them?</b>\n
            Your questions are answered by other users of the app. Our users are mostly comprised of fellow students.\n\n
            <b>How can I report abuse?</b>\n
            You can report users from their profile page. Reports are handled by administrators.\n\n
        </p>
    </string>
    <string name="profilepicture">ProfilePicture</string>
    <string name="profileMessage">Message</string>
    <string name="home_button_BCS">BCS</string>
    <string name="home_button_BAM">BAM</string>
    <string name="home_button_BAP">BAP</string>
    <string name="home_button_BBE">BBE</string>
    <string name="home_button_BDS">BDS</string>
    <string name="home_button_BEE">BEE</string>
    <string name="popup_books_button">Books</string>
    <string name="popup_questions_button">Questions</string>
    <string name="admin">Admin</string>
    <string name="SelectImageDialogTitle">Choose an image to upload</string>
    <string name="SelectImageDialogOpt1">Take Photo</string>
    <string name="SelectImageDialogOpt2">Choose from Gallery</string>
    <string name="SelectImageDialogCancel">Cancel</string>
    <string name="ErrorBookTitle">A book must have a title!</string>
    <string name="ErrorBookAuthor">A book must have an author!</string>
    <string name="ErrorBookDescription">A book must have a description!</string>
    <string name="ErrorBookPrice">A book must have a price!</string>
    <string name="ErrorNotLoggedIn">You must be logged in to do that!</string>
    <string name="MessageSuccessAddBook">Successfully added a book!</string>
    <string name="MessageNoSuccessAddBook">Unsuccessful when attempting to add the book!</string>
    <string name="popup_window_text">What would you like to see?</string>
</resources>
