<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFCBA9">

    <TextView
        android:id="@+id/popupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/popup_window_text"
        android:textColor="#B95716"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/popupQuestion"
        android:layout_width="155dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="3dp"
        android:text="@string/popup_questions_button"
        android:textColor="#B95716"
        android:textStyle="bold" />

    <Button
        android:id="@+id/popupBook"
        android:layout_width="155dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:text="@string/popup_books_button"
        android:textColor="#B95716"
        android:textStyle="bold" />

</RelativeLayout>